--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ wp-config.php
 
 # Example themes
 /wp-content/themes/twenty*/
+/wp-content/themes/template-theme/
 
 # Example plugin
 /wp-content/plugins/hello.php
